# bee-script

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  bee-script.hm
grammar/: bee-script.hm  conditionals.hm  expressions.hm  functions.hm  literals.hm  loops.hm  terminals.hm  types.hm
inc/: symbol-table.h  syntax-node.h
inc/beescript/: ast-to-dag.h  dag-node.h  errors.h  symbol-table.h  symbol.h  syntax-node.h  type-check.h
src/: dag-node.cpp  errors.cpp  main.cpp  symbol-table.cpp  symbol.cpp  type-check.cpp
src/syntax-nodes/: decl-node.cpp  expr-node.cpp  stmt-node.cpp  syntax-node.cpp  type-node.cpp
test-scripts/: bad-types.bs  basic.bs  syntax.bs
